--- a/src/styles.css
+++ b/src/styles.css
@@ -7,9 +7,10 @@ html {
   --game-spacing: 32px;
   --header-height: 4rem;
 
-  --color-success: hsl(150deg 70% 30%);
-  --color-warning: hsl(50deg 100% 30%);
-  --color-error: hsl(0, 41%, 47%);
+  --color-success:hsl(131, 54%, 40%);
+  --color-warning:hsl(46, 51%, 48%);
+  --color-error:hsl(0, 41%, 47%);
+  --color-refresh:hsl(208, 80%, 52%);
   --color-gray-100: hsl(0deg 0% 10%);
   --color-gray-300: hsl(0deg 0% 25%);
   --color-gray-500: hsl(0deg 0% 50%);
@@ -183,6 +184,20 @@ h1 {
 .sad.banner {
   background: var(--color-error);
   color: white;
+}
+
+.btn {
+  display: inline;
+  margin: auto;
+  text-decoration: none;
+}
+.btn.medium {
+  padding: 12px 24px;
+  border-radius: 8px;
+}
+.btn.refresh {
+  background-color: var(--color-refresh);
+  color: white;  
 }
 
 .visually-hidden {
